// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title 1`] = `
<header
  className="cf-uj4x51"
>
  <h1
    className="cf-uj4x51"
  >
    Title
  </h1>
</header>
`;

exports[`should render title/subtitle 1`] = `
<header
  className="cf-uj4x51"
>
  <h1
    className="cf-uj4x51"
  >
    Title
  </h1>
  <p
    className="cf-uj4x51"
  >
    Subtitle
  </p>
</header>
`;
